--- a/.babelrc
+++ b/.babelrc
@@ -1,16 +1,14 @@
 {
-  "presets": ["react", "es2015", "stage-0"],
-  "plugins": ["transform-react-jsx","transform-object-rest-spread","transform-class-properties"],
+  "presets": [
+    ["env", { "modules": false }],
+    "stage-2"
+  ],
+  "plugins": ["transform-runtime"],
+  "comments": false,
   "env": {
-    "development": {
-      "plugins": [
-        [ "babel-plugin-webpack-alias", { "config": "./webpack/index.babel.js" } ]
-      ]
-    },
-    "production": {
-      "plugins": [
-        [ "babel-plugin-webpack-alias", { "config": "./webpack/index.babel.js" } ]
-      ]
+    "test": {
+      "presets": ["env", "stage-2"],
+      "plugins": [ "istanbul" ]
     }
   }
 }
