--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,9 @@
-*.log
-.idea
-coverage/
-dist/
-build/
-*.vimrc
-.DS_STORE
+.DS_Store
 node_modules/
-bower_components/
-.nyc_output/
-.vscode/
+dist/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+test/unit/coverage
+test/e2e/reports
+selenium-debug.log
