--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,21 @@
 {
   "presets": [
     ["env", { "modules": false }],
-    "stage-2"
-  ],
+    "stage-2",
+    "es2015"
+    ],
   "plugins": ["transform-runtime"],
   "comments": false,
   "env": {
-    "test": {
-      "presets": ["env", "stage-2"],
-      "plugins": [ "istanbul" ]
+    "development": {
+      "plugins": [
+        [ "babel-plugin-webpack-alias", { "config": "./webpack/index.babel.js" } ]
+      ]
+    },
+    "production": {
+      "plugins": [
+        [ "babel-plugin-webpack-alias", { "config": "./webpack/index.babel.js" } ]
+      ]
     }
   }
 }
