--- a/package.json
+++ b/package.json
@@ -5,39 +5,74 @@
   "author": "Jose Manuel Bermudo <josemanuelbd@gmail.com>",
   "private": true,
   "scripts": {
-    "dev": "node build/dev-server.js",
-    "start": "node build/dev-server.js",
-    "build": "node build/build.js",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "e2e": "node test/e2e/runner.js",
-    "test": "npm run unit && npm run e2e",
-    "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
+    "test2": "npm run unit && npm run e2e",
+    "logo": "node ./src/base/conf/.react-base/logo.js",
+    "webpack": "node_modules/webpack/bin/webpack.js",
+    "clean": "rimraf dist/ && npm run generate:dll",
+    "clean:files": "rimraf dist/app.js",
+    "generate": "npm run logo && yo react-base",
+    "generate:component": "npm run logo && yo react-base --option=2",
+    "generate:container": "npm run logo && yo react-base --option=1",
+    "regenerate:modelIndex": "node ./src/base/shared/Regenerate.js --model",
+    "regenerate:routes": "node ./src/base/shared/Regenerate.js --routes",
+    "regenerate:reducerIndex": "node ./src/base/shared/Regenerate.js --reducer",
+    "regenerate": "npm run logo && node ./src/base/shared/Regenerate.js --all",
+    "generate:dll": "cross-env NODE_ENV=dll webpack --config webpack/webpack.dll.config.babel.js",
+    "build": "cross-env NODE_ENV=development webpack --config webpack/index.babel.js",
+    "build:prod": "npm run clean && cross-env NODE_ENV=production webpack --config webpack/index.babel.js",
+    "lint": "npm run logo && node node_modules/eslint/bin/eslint.js src --ignore-pattern **/*.spec.js  --ext .js --ext .jsx",
+    "lint:css": "npm run logo && stylelint \"src/**/*.css\" --config .stylelintrc",
+    "lint:all": "npm run lint && npm run lint:css",
+    "test": "npm run logo && mocha --compilers js:babel-core/register --recursive \"./src/**/*.spec.js\" --require ignore-styles \"./src/base/shared/JsDomSetup.js\"",
+    "test:coverage": "nyc npm test && nyc report --reporter=lcov",
+    "start": "npm run logo && cross-env NODE_ENV=development node server/",
+    "start:prod": "npm run build:prod && cross-env NODE_ENV=production node server/",
+    "yo": "npm link src/base/conf/.react-base/templates/generator-react-base",
+    "postYeomanGenerator": "npm run regenerate && npm run start",
+    "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
+    "postinstall": "npm run generate:dll"
   },
   "dependencies": {
+    "babel-register": "^6.22.0",
+    "babel-core": "^6.22.1",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "compression": "1.6.2",
+    "cross-env": "^5.0.1",
+    "css-modules-require-hook": "^4.0.6",
+    "express": "^4.15.3",
     "redux": "^3.6.0",
     "revue": "^3.0.0",
     "vue": "^2.3.3",
     "vue-router": "^2.3.1"
   },
   "devDependencies": {
-    "autoprefixer": "^6.7.2",
-    "babel-core": "^6.22.1",
-    "babel-eslint": "^7.1.1",
+    "assets-webpack-plugin": "^3.5.1",
+    "autoprefixer": "^7.1.1",
+    "babel-eslint": "7.2.3",
     "babel-loader": "^6.2.10",
+    "babel-plugin-istanbul": "^4.1.1",
     "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-plugin-webpack-alias": "2.1.2",
     "babel-preset-env": "^1.3.2",
+    "babel-preset-es2015": "6.24.1",
     "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.22.0",
+    "babel-preset-vue": "^0.2.0",
+    "chai": "^4.0.2",
     "chalk": "^1.1.3",
+    "chromedriver": "^2.27.2",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
+    "cross-env": "^5.0.1",
+    "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.0",
-    "eslint": "^3.19.0",
-    "eslint-friendly-formatter": "^2.0.7",
-    "eslint-loader": "^1.7.1",
-    "eslint-plugin-html": "^2.0.0",
+    "eslint": "^4.0.0",
     "eslint-config-airbnb-base": "^11.1.3",
+    "eslint-friendly-formatter": "^3.0.0",
     "eslint-import-resolver-webpack": "^0.8.1",
+    "eslint-loader": "^1.7.1",
+    "eslint-plugin-html": "^3.0.0",
     "eslint-plugin-import": "^2.2.0",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.14.1",
@@ -46,8 +81,8 @@
     "friendly-errors-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
-    "webpack-bundle-analyzer": "^2.2.1",
-    "cross-env": "^4.0.0",
+    "immutable": "^3.8.1",
+    "inject-loader": "^3.0.0",
     "karma": "^1.4.1",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
@@ -55,32 +90,35 @@
     "karma-phantomjs-shim": "^1.4.0",
     "karma-sinon-chai": "^1.3.1",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "0.0.30",
+    "karma-spec-reporter": "0.0.31",
     "karma-webpack": "^2.0.2",
     "lolex": "^1.5.2",
     "mocha": "^3.2.0",
-    "chai": "^3.5.0",
-    "sinon": "^2.1.0",
-    "sinon-chai": "^2.8.0",
-    "inject-loader": "^3.0.0",
-    "babel-plugin-istanbul": "^4.1.1",
-    "phantomjs-prebuilt": "^2.1.14",
-    "chromedriver": "^2.27.2",
-    "cross-spawn": "^5.0.1",
     "nightwatch": "^0.9.12",
+    "opn": "^5.1.0",
+    "optimize-css-assets-webpack-plugin": "^2.0.0",
+    "ora": "^1.2.0",
+    "phantomjs-prebuilt": "^2.1.14",
+    "postcss-import": "^10.0.0",
+    "postcss-modules-extract-imports": "^1.1.0",
+    "postcss-nested": "^2.0.2",
+    "postcss-reporter": "^4.0.0",
+    "postcss-url": "^7.0.0",
+    "progress-bar-webpack-plugin": "^1.9.3",
+    "rimraf": "^2.6.0",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
-    "opn": "^4.0.2",
-    "optimize-css-assets-webpack-plugin": "^1.3.0",
-    "ora": "^1.2.0",
-    "rimraf": "^2.6.0",
+    "sinon": "^2.1.0",
+    "sinon-chai": "^2.8.0",
     "url-loader": "^0.5.8",
     "vue-loader": "^12.1.0",
     "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.3.3",
+    "vue-template-compiler": "^2.3.4",
     "webpack": "^2.6.1",
-    "webpack-dev-middleware": "^1.10.0",
+    "webpack-bundle-analyzer": "^2.2.1",
+    "webpack-dev-middleware": "^1.10.2",
+    "webpack-dev-server": "^2.4.5",
     "webpack-hot-middleware": "^2.18.0",
     "webpack-merge": "^4.1.0"
   },
@@ -88,6 +126,11 @@
     "node": ">= 4.0.0",
     "npm": ">= 3.0.0"
   },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ],
   "browserslist": [
     "> 1%",
     "last 2 versions",
