--- a/package.json
+++ b/package.json
@@ -35,32 +35,32 @@
     "postinstall": "npm run generate:dll"
   },
   "dependencies": {
-    "babel-register": "^6.22.0",
     "babel-core": "^6.22.1",
     "babel-plugin-transform-runtime": "^6.22.0",
-    "compression": "1.6.2",
+    "babel-register": "^6.22.0",
+    "compression": "1.7.1",
     "cross-env": "^5.0.1",
     "css-modules-require-hook": "^4.0.6",
     "express": "^4.15.3",
     "redux": "^3.6.0",
-    "revue": "^3.0.0",
     "vue": "^2.3.3",
-    "vue-router": "^2.3.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "assets-webpack-plugin": "^3.5.1",
     "autoprefixer": "^7.1.1",
-    "babel-eslint": "7.2.3",
-    "babel-loader": "^6.2.10",
+    "babel-eslint": "8.2.1",
+    "babel-loader": "^7.1.2",
     "babel-plugin-istanbul": "^4.1.1",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-webpack-alias": "2.1.2",
     "babel-preset-env": "^1.3.2",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-stage-2": "^6.22.0",
-    "babel-preset-vue": "^0.2.0",
+    "babel-preset-vue": "^2.0.0",
     "chai": "^4.0.2",
-    "chalk": "^1.1.3",
+    "chalk": "^2.3.0",
     "chromedriver": "^2.27.2",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
@@ -68,56 +68,56 @@
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.0",
     "eslint": "^4.0.0",
-    "eslint-config-airbnb-base": "^11.2.0",
+    "eslint-config-airbnb-base": "^12.1.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-import-resolver-webpack": "^0.8.1",
     "eslint-loader": "^1.7.1",
-    "eslint-plugin-html": "^3.0.0",
+    "eslint-plugin-html": "^4.0.1",
     "eslint-plugin-import": "^2.2.0",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.14.1",
-    "extract-text-webpack-plugin": "^2.0.0",
-    "file-loader": "^0.11.1",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.6",
     "friendly-errors-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
     "immutable": "^3.8.1",
     "inject-loader": "^3.0.0",
-    "karma": "^1.4.1",
+    "karma": "^2.0.0",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-phantomjs-shim": "^1.4.0",
     "karma-sinon-chai": "^1.3.1",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "0.0.31",
+    "karma-spec-reporter": "0.0.32",
     "karma-webpack": "^2.0.2",
-    "lolex": "^1.5.2",
-    "mocha": "^3.2.0",
+    "lolex": "^2.3.1",
+    "mocha": "^5.0.0",
     "nightwatch": "^0.9.12",
     "opn": "^5.1.0",
-    "optimize-css-assets-webpack-plugin": "^2.0.0",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "phantomjs-prebuilt": "^2.1.14",
-    "postcss-import": "^10.0.0",
+    "postcss-import": "^11.0.0",
     "postcss-modules-extract-imports": "^1.1.0",
-    "postcss-nested": "^2.0.2",
-    "postcss-reporter": "^4.0.0",
+    "postcss-nested": "^3.0.0",
+    "postcss-reporter": "^5.0.0",
     "postcss-url": "^7.0.0",
     "progress-bar-webpack-plugin": "^1.9.3",
     "rimraf": "^2.6.0",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
-    "shelljs": "^0.7.6",
-    "sinon": "^2.1.0",
+    "shelljs": "^0.8.1",
+    "sinon": "^4.2.0",
     "sinon-chai": "^2.8.0",
-    "url-loader": "^0.5.8",
-    "vue-loader": "^12.1.0",
+    "url-loader": "^0.6.2",
+    "vue-loader": "^13.7.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.3.4",
-    "webpack": "^2.6.1",
+    "webpack": "^3.10.0",
     "webpack-bundle-analyzer": "^2.2.1",
-    "webpack-dev-middleware": "^1.10.2",
+    "webpack-dev-middleware": "^2.0.4",
     "webpack-dev-server": "^2.4.5",
     "webpack-hot-middleware": "^2.18.0",
     "webpack-merge": "^4.1.0"
