--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
-  "name": "VueBase",
+  "name": "vue-base-starter",
   "version": "0.9.6",
-  "description": "Vue Universal Redux Starterk Kit",
+  "description": "Vue starter kit ReVue",
   "author": "Pablo Magaz",
   "contributors": [
     {
-      "name": "Jose Manuel Bermudo",
+      "name": "Santiago Fernandez Blanco",
+      "email": "sfernandez.blanco@atsistemas.com"
+    },
+    {
+      "name": "Fernando Ramos González",
+      "email": "framos@atsistemas.com"
+    },
+    {
+      "name": "José Manuel Bermudo",
       "email": "jmbermudo@atsistemas.com"
     },
     {
-      "name": "Carlos Suazo",
-      "email": "csuazo@atsistemas.com"
-    },
-    {
-      "name": "Carlos Suazo",
-      "email": "csuazo@atsistemas.com"
+      "name": "Jesús González Jaén",
+      "email": "jgonzalez.jaen@atsistemas.com"
     }
   ],
   "private": true,
@@ -49,22 +53,17 @@
     "babel-core": "^6.22.1",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-register": "^6.22.0",
-    "compression": "1.7.1",
-    "cross-env": "^5.0.1",
+    "compression": "1.7.2",
     "css-modules-require-hook": "^4.0.6",
     "express": "^4.15.3",
-    "immutable": "^3.8.2",
-    "isomorphic-fetch": "^2.2.1",
-    "moment": "^2.20.1",
-    "redux": "^3.6.0",
     "vue": "^2.3.3",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
     "assets-webpack-plugin": "^3.5.1",
-    "autoprefixer": "^7.1.1",
-    "babel-eslint": "8.2.1",
+    "autoprefixer": "^8.0.0",
+    "babel-eslint": "^8.2.2",
     "babel-loader": "^7.1.2",
     "babel-plugin-istanbul": "^4.1.1",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
@@ -79,40 +78,25 @@
     "chromedriver": "^2.27.2",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^5.0.1",
-    "cross-spawn": "^5.0.1",
+    "cross-env": "^5.1.3",
+    "cross-spawn": "^6.0.4",
     "css-loader": "^0.28.0",
     "eslint": "^4.0.0",
     "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-config-standard": "^11.0.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-import-resolver-webpack": "^0.8.1",
-    "eslint-loader": "^1.7.1",
-    "eslint-plugin-html": "^4.0.1",
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-html": "^4.0.2",
     "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-vue": "^4.3.0",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.14.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
-    "friendly-errors-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^2.28.0",
-    "http-proxy-middleware": "^0.17.3",
-    "inject-loader": "^3.0.0",
-    "karma": "^2.0.0",
-    "karma-coverage": "^1.1.1",
-    "karma-mocha": "^1.3.0",
-    "karma-phantomjs-launcher": "^1.0.2",
-    "karma-phantomjs-shim": "^1.4.0",
-    "karma-sinon-chai": "^1.3.1",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "0.0.32",
-    "karma-webpack": "^2.0.2",
-    "lolex": "^2.3.1",
+    "isomorphic-fetch": "^2.2.1",
     "mocha": "^5.0.0",
-    "nightwatch": "^0.9.12",
-    "opn": "^5.1.0",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
-    "ora": "^1.2.0",
-    "phantomjs-prebuilt": "^2.1.14",
     "postcss-import": "^11.0.0",
     "postcss-modules-extract-imports": "^1.1.0",
     "postcss-nested": "^3.0.0",
@@ -120,21 +104,19 @@
     "postcss-url": "^7.0.0",
     "progress-bar-webpack-plugin": "^1.9.3",
     "rimraf": "^2.6.0",
-    "semver": "^5.3.0",
-    "shelljs": "^0.8.1",
     "sinon": "^4.2.0",
     "sinon-chai": "^2.8.0",
+    "standard": "^11.0.0",
     "url-loader": "^0.6.2",
-    "vue-loader": "^13.7.0",
-    "vue-style-loader": "^3.0.1",
+    "vue-loader": "^14.1.1",
+    "vue-style-loader": "^4.0.2",
     "vue-template-compiler": "^2.3.4",
     "vue2-google-maps": "^0.8.8",
-    "webpack": "^3.10.0",
+    "webpack": "3.10.0",
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^2.0.4",
-    "webpack-dev-server": "^2.4.5",
-    "webpack-hot-middleware": "^2.18.0",
-    "webpack-merge": "^4.1.0"
+    "webpack-dev-server": "^3.0.0",
+    "webpack-hot-middleware": "^2.18.0"
   },
   "engines": {
     "node": ">= 6.0.0",
