--- a/package.json
+++ b/package.json
@@ -85,12 +85,14 @@
     "css-loader": "^0.28.0",
     "eslint": "^4.0.0",
     "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-config-airbnb-standard": "^1.6.6",
     "eslint-config-standard": "^11.0.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-import-resolver-webpack": "^0.8.1",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-html": "^4.0.2",
     "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-vue": "^4.3.0",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.14.1",
