--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "css-modules-require-hook": "^4.0.6",
     "express": "^4.15.3",
     "moment": "^2.20.1",
-    "vue": "^2.3.3",
+    "vue": "2.5.16",
     "vue-eslint-parser": "^2.0.3",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
@@ -98,7 +98,7 @@
     "express": "^4.14.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
-    "html-webpack-plugin": "^2.28.0",
+    "html-webpack-plugin": "^3.0.7",
     "isomorphic-fetch": "^2.2.1",
     "mocha": "^5.0.0",
     "postcss-import": "^11.0.0",
@@ -109,12 +109,12 @@
     "progress-bar-webpack-plugin": "^1.9.3",
     "rimraf": "^2.6.0",
     "sinon": "^4.2.0",
-    "sinon-chai": "^2.8.0",
+    "sinon-chai": "^3.0.0",
     "standard": "^11.0.0",
-    "url-loader": "^0.6.2",
+    "url-loader": "^1.0.1",
     "vue-loader": "^14.1.1",
     "vue-style-loader": "^4.0.2",
-    "vue-template-compiler": "^2.3.4",
+    "vue-template-compiler": "2.5.16",
     "vue2-google-maps": "^0.8.8",
     "webpack": "3.10.0",
     "webpack-bundle-analyzer": "^2.2.1",
