--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-base-starter",
   "version": "0.9.6",
-  "description": "Vue starter kit ReVue",
+  "description": "Vue starter kit vuex",
   "author": "Pablo Magaz",
   "contributors": [
     {
