--- a/package.json
+++ b/package.json
@@ -62,7 +62,6 @@
   "devDependencies": {
     "@babel/core": "7.0.0-beta.42",
     "@babel/preset-env": "7.0.0-beta.42",
-    "babel-register": "6.26.0",
     "assets-webpack-plugin": "3.5.1",
     "autoprefixer": "8.2.0",
     "babel-eslint": "8.2.2",
@@ -75,6 +74,7 @@
     "babel-preset-es2015": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
     "babel-preset-vue": "2.0.2",
+    "babel-register": "6.26.0",
     "chai": "4.1.2",
     "chalk": "2.3.2",
     "chromedriver": "2.37.0",
@@ -113,14 +113,14 @@
     "sinon": "4.4.8",
     "sinon-chai": "3.0.0",
     "standard": "11.0.1",
-    "vue-eslint-parser": "2.0.3",
     "url-loader": "1.0.1",
+    "vue-eslint-parser": "2.0.3",
     "vue-loader": "14.2.2",
     "vue-style-loader": "4.1.0",
     "vue-template-compiler": "2.5.16",
     "vue2-google-maps": "0.8.11",
     "webpack": "4.2.0",
-    "webpack-bundle-analyzer": "2.11.1",
+    "webpack-bundle-analyzer": "^2.11.1",
     "webpack-cli": "2.0.13",
     "webpack-dev-middleware": "3.0.1",
     "webpack-dev-server": "3.1.1",
