--- a/package.json
+++ b/package.json
@@ -24,40 +24,35 @@
   "private": true,
   "scripts": {
     "logo": "node ./src/base/conf/.react-base/logo.js",
+    "clean": "rimraf dist",
     "webpack": "node_modules/webpack/bin/webpack.js",
-    "clean": "rimraf dist/ && npm run generate:dll",
-    "clean:files": "rimraf dist/app.js",
-    "generate": "npm run logo && yo react-base",
-    "generate:component": "npm run logo && yo react-base --option=2",
-    "generate:container": "npm run logo && yo react-base --option=1",
-    "regenerate:modelIndex": "node ./src/base/shared/Regenerate.js --model",
-    "regenerate:routes": "node ./src/base/shared/Regenerate.js --routes",
-    "regenerate:reducerIndex": "node ./src/base/shared/Regenerate.js --reducer",
-    "regenerate": "npm run logo && node ./src/base/shared/Regenerate.js --all",
-    "generate:dll": "cross-env NODE_ENV=dll webpack --config webpack/webpack.dll.config.babel.js",
-    "build": "cross-env NODE_ENV=development webpack --config webpack/index.babel.js",
-    "build:prod": "npm run clean && cross-env NODE_ENV=production webpack --config webpack/index.babel.js --optimize-minimze",
+    "build": "rimraf dist && npm run build:client && npm run build:server",
+    "build:client": "cross-env NODE_ENV=production webpack --config webpack/index.babel.client.js --optimize-minimze",
+    "build:server": "cross-env NODE_ENV=production webpack --config webpack/index.babel.server.js --optimize-minimze",
     "lint": "npm run logo && node node_modules/eslint/bin/eslint.js src --ignore-pattern **/*.spec.js --ext .vue,.js",
     "lint:css": "npm run logo && stylelint \"src/**/*.css\" --config .stylelintrc",
     "lint:all": "npm run lint && npm run lint:css",
     "test": "npm run logo && mocha --compilers js:babel-core/register --recursive \"./src/**/*.spec.js\" --require ignore-styles \"./src/base/shared/JsDomSetup.js\"",
     "test:coverage": "nyc npm test && nyc report --reporter=lcov",
     "start": "npm run logo && cross-env NODE_ENV=development node server/",
-    "start:prod": "npm run build:prod && cross-env NODE_ENV=production node server/",
-    "yo": "npm link src/base/conf/.react-base/templates/generator-react-base",
-    "postYeomanGenerator": "npm run regenerate && npm run start",
-    "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
-    "postinstall": "npm run generate:dll"
+    "start:prod": "cross-env NODE_ENV=production node server/",
+    "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls"
   },
   "dependencies": {
     "babel-plugin-transform-runtime": "6.23.0",
+    "babel-preset-stage-0": "^6.24.1",
     "compression": "1.7.2",
     "css-modules-require-hook": "4.2.3",
     "express": "4.16.3",
     "moment": "2.21.0",
+    "robotstxt-webpack-plugin": "^4.0.1",
+    "route-cache": "^0.4.4",
+    "serve-favicon": "^2.5.0",
     "vue": "2.5.16",
     "vue-router": "3.0.1",
-    "vuex": "3.0.1"
+    "vue-server-renderer": "^2.5.16",
+    "vuex": "3.0.1",
+    "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.0.0-beta.42",
@@ -66,14 +61,15 @@
     "autoprefixer": "8.2.0",
     "babel-eslint": "8.2.2",
     "babel-loader": "7.1.4",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-istanbul": "4.1.5",
     "babel-plugin-syntax-dynamic-import": "6.18.0",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-plugin-webpack-alias": "2.1.2",
     "babel-preset-env": "1.6.1",
-    "babel-preset-es2015": "6.24.1",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "6.24.1",
-    "babel-preset-vue": "2.0.2",
+    "babel-preset-vue": "^2.0.2",
     "babel-register": "6.26.0",
     "chai": "4.1.2",
     "chalk": "2.3.2",
@@ -97,7 +93,9 @@
     "eslint-plugin-standard": "3.0.1",
     "eslint-plugin-vue": "4.4.0",
     "eventsource-polyfill": "0.9.6",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "1.1.11",
+    "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "3.1.0",
     "ignore-styles": "5.0.1",
     "isomorphic-fetch": "2.2.1",
@@ -113,6 +111,7 @@
     "sinon": "4.4.8",
     "sinon-chai": "3.0.0",
     "standard": "11.0.1",
+    "sw-precache-webpack-plugin": "^0.11.5",
     "url-loader": "1.0.1",
     "vue-eslint-parser": "2.0.3",
     "vue-loader": "14.2.2",
@@ -124,7 +123,9 @@
     "webpack-cli": "2.0.13",
     "webpack-dev-middleware": "3.0.1",
     "webpack-dev-server": "3.1.1",
-    "webpack-hot-middleware": "2.21.2"
+    "webpack-hot-middleware": "2.21.2",
+    "webpack-merge": "^4.1.2",
+    "webpack-node-externals": "^1.7.2"
   },
   "engines": {
     "node": ">= 6.0.0",
@@ -147,17 +148,15 @@
     "vue",
     "vue-router",
     "redux",
-    "revue",
+    "ssr",
     "starter",
     "starterKit",
     "seed",
     "isomorphic",
     "universal",
-    "postcss",
     "css-modules",
-    "webpack2",
+    "webpack",
     "testing",
-    "yeoman",
     "istambul"
   ]
 }
