--- a/package.json
+++ b/package.json
@@ -52,15 +52,19 @@
   "dependencies": {
     "babel-core": "^6.22.1",
     "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-plugin-transform-vue-jsx": "^3.7.0",
     "babel-register": "^6.22.0",
     "compression": "1.7.2",
     "css-modules-require-hook": "^4.0.6",
     "express": "^4.15.3",
     "moment": "^2.20.1",
+    "serve-favicon": "^2.5.0",
     "vue": "2.5.16",
     "vue-eslint-parser": "^2.0.3",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vue-server-renderer": "^2.5.16",
+    "vuex": "^3.0.1",
+    "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
     "assets-webpack-plugin": "^3.5.1",
@@ -70,11 +74,13 @@
     "babel-plugin-istanbul": "^4.1.1",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-plugin-transform-vue-template": "^0.3.1",
     "babel-plugin-webpack-alias": "2.1.2",
     "babel-preset-env": "^1.3.2",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-stage-2": "^6.22.0",
-    "babel-preset-vue": "^2.0.0",
+    "babel-preset-vue": "^2.0.2",
+    "babel-preset-vue-app": "^2.0.0",
     "chai": "^4.0.2",
     "chalk": "^2.3.0",
     "chromedriver": "^2.27.2",
@@ -91,7 +97,6 @@
     "eslint-loader": "^2.0.0",
     "eslint-plugin-html": "^4.0.2",
     "eslint-plugin-import": "^2.9.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.0.1",
@@ -116,7 +121,7 @@
     "url-loader": "^1.0.1",
     "vue-loader": "^14.1.1",
     "vue-style-loader": "^4.0.2",
-    "vue-template-compiler": "2.5.16",
+    "vue-template-compiler": "^2.5.16",
     "vue2-google-maps": "^0.8.8",
     "webpack": "3.10.0",
     "webpack-bundle-analyzer": "^2.2.1",
