--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "lint": "npm run logo && node node_modules/eslint/bin/eslint.js src --ignore-pattern **/*.spec.js --ext .vue,.js",
     "lint:css": "npm run logo && stylelint \"src/**/*.css\" --config .stylelintrc",
     "lint:all": "npm run lint && npm run lint:css",
-    "test": "npm run logo && mocha --compilers js:babel-core/register --recursive \"./src/**/*.spec.js\" --require ignore-styles \"./src/base/shared/JsDomSetup.js\"",
+    "test": "npm run logo && mocha --require babel-core/register --recursive \"./src/**/*.spec.js\" --require ignore-styles \"./src/base/shared/JsDomSetup.js\"",
     "test:coverage": "nyc npm test && nyc report --reporter=lcov",
     "start": "npm run logo && cross-env NODE_ENV=development node server/",
     "start:prod": "npm run build:prod && cross-env NODE_ENV=production node server/",
@@ -50,39 +50,37 @@
     "postinstall": "npm run generate:dll"
   },
   "dependencies": {
-    "babel-core": "^6.22.1",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-register": "^6.22.0",
+    "babel-core": "6.26.0",
     "compression": "1.7.2",
-    "css-modules-require-hook": "^4.0.6",
-    "express": "^4.15.3",
-    "moment": "^2.20.1",
+    "express": "4.16.2",
+    "moment": "2.20.1",
     "vue": "2.5.16",
-    "vue-eslint-parser": "^2.0.3",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vue-router": "3.0.1",
+    "vuex": "3.0.1"
   },
   "devDependencies": {
-    "assets-webpack-plugin": "^3.5.1",
-    "autoprefixer": "^8.0.0",
-    "babel-eslint": "^8.2.2",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-istanbul": "^4.1.1",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-plugin-transform-runtime": "^6.22.0",
+    "assets-webpack-plugin": "3.5.1",
+    "autoprefixer": "8.2.0",
+    "babel-eslint": "8.2.2",
+    "babel-loader": "7.1.2",
+    "babel-plugin-istanbul": "4.1.6",
+    "babel-plugin-syntax-dynamic-import": "6.18.0",
+    "babel-plugin-transform-runtime": "6.23.0",
     "babel-plugin-webpack-alias": "2.1.2",
-    "babel-preset-env": "^1.3.2",
+    "babel-preset-env": "1.6.1",
     "babel-preset-es2015": "6.24.1",
-    "babel-preset-stage-2": "^6.22.0",
-    "babel-preset-vue": "^2.0.0",
-    "chai": "^4.0.2",
-    "chalk": "^2.3.0",
-    "chromedriver": "^2.27.2",
+    "babel-preset-stage-2": "6.22.0",
+    "babel-preset-vue": "2.0.2",
+    "babel-register": "6.26.0",
+    "chai": "4.1.2",
+    "chalk": "2.3.2",
+    "chromedriver": "2.37.0",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^5.1.3",
     "cross-spawn": "^6.0.4",
     "css-loader": "^0.28.0",
+    "css-modules-require-hook": "4.2.2",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-standard": "^11.0.0",
@@ -100,7 +98,9 @@
     "express": "^4.14.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
+    "jsdom": "11.4.0",
     "html-webpack-plugin": "^3.1.0",
+    "ignore-styles": "5.0.1",
     "isomorphic-fetch": "^2.2.1",
     "mocha": "^5.0.0",
     "postcss-import": "^11.0.0",
@@ -114,7 +114,8 @@
     "sinon-chai": "^3.0.0",
     "standard": "^11.0.0",
     "url-loader": "^1.0.1",
-    "vue-loader": "^14.1.1",
+    "vue-eslint-parser": "2.0.3",
+    "vue-loader": "14.2.2",
     "vue-style-loader": "^4.0.2",
     "vue-template-compiler": "2.5.16",
     "vue2-google-maps": "^0.8.8",
