--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "lint": "npm run logo && node node_modules/eslint/bin/eslint.js src --ignore-pattern **/*.spec.js --ext .vue,.js",
     "lint:css": "npm run logo && stylelint \"src/**/*.css\" --config .stylelintrc",
     "lint:all": "npm run lint && npm run lint:css",
-    "test": "npm run logo && mocha --require babel-core/register --recursive \"./src/**/*.spec.js\" --require ignore-styles \"./src/base/shared/JsDomSetup.js\"",
+    "test": "npm run logo && cross-env NODE_ENV=development node ./node_modules/mocha-webpack/bin/mocha-webpack --webpack-config webpack/webpack.test.config.js --require ./src/base/shared/JsDomSetup.js src/**/*.spec.js",
     "test:coverage": "nyc npm test && nyc report --reporter=lcov",
     "start": "npm run logo && cross-env NODE_ENV=development node server/",
     "start:prod": "npm run build:prod && cross-env NODE_ENV=production node server/",
@@ -51,9 +51,12 @@
   },
   "dependencies": {
     "babel-core": "6.26.0",
+    "babel-preset-env": "^1.6.1",
     "compression": "1.7.2",
     "express": "4.16.2",
+    "install": "^0.11.0",
     "moment": "2.20.1",
+    "npm": "^5.8.0",
     "vue": "2.5.16",
     "vue-router": "3.0.1",
     "vuex": "3.0.1"
@@ -61,15 +64,17 @@
   "devDependencies": {
     "assets-webpack-plugin": "3.5.1",
     "autoprefixer": "8.2.0",
+    "babel-cli": "^6.26.0",
     "babel-eslint": "8.2.2",
-    "babel-loader": "7.1.2",
+    "babel-loader": "7.1.4",
     "babel-plugin-istanbul": "4.1.6",
     "babel-plugin-syntax-dynamic-import": "6.18.0",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-plugin-webpack-alias": "2.1.2",
-    "babel-preset-env": "1.6.1",
-    "babel-preset-es2015": "6.24.1",
-    "babel-preset-stage-2": "6.22.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-latest": "^6.24.1",
+    "babel-preset-stage-2": "6.24.1",
     "babel-preset-vue": "2.0.2",
     "babel-register": "6.26.0",
     "chai": "4.1.2",
@@ -80,12 +85,12 @@
     "cross-env": "^5.1.3",
     "cross-spawn": "^6.0.4",
     "css-loader": "^0.28.0",
-    "css-modules-require-hook": "4.2.2",
+    "css-modules-require-hook": "4.2.3",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-config-standard": "^11.0.0",
     "eslint-friendly-formatter": "^3.0.0",
-    "eslint-import-resolver-webpack": "^0.8.1",
+    "eslint-import-resolver-webpack": "0.9.0",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-html": "^4.0.2",
     "eslint-plugin-import": "^2.9.0",
@@ -95,14 +100,14 @@
     "eslint-plugin-standard": "^3.0.1",
     "eslint-plugin-vue": "^4.4.0",
     "eventsource-polyfill": "^0.9.6",
-    "express": "^4.14.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
-    "jsdom": "11.4.0",
     "html-webpack-plugin": "^3.1.0",
     "ignore-styles": "5.0.1",
     "isomorphic-fetch": "^2.2.1",
+    "jsdom": "11.4.0",
     "mocha": "^5.0.0",
+    "mocha-webpack": "1.1.0",
     "postcss-import": "^11.0.0",
     "postcss-modules-extract-imports": "^1.1.0",
     "postcss-nested": "^3.0.0",
@@ -117,13 +122,14 @@
     "vue-eslint-parser": "2.0.3",
     "vue-loader": "14.2.2",
     "vue-style-loader": "^4.0.2",
-    "vue-template-compiler": "2.5.16",
+    "vue-template-compiler": "^2.5.16",
     "vue2-google-maps": "^0.8.8",
     "webpack": "3.10.0",
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^2.0.4",
     "webpack-dev-server": "^3.0.0",
-    "webpack-hot-middleware": "^2.18.0"
+    "webpack-hot-middleware": "^2.18.0",
+    "webpack-node-externals": "^1.7.2"
   },
   "engines": {
     "node": ">= 6.0.0",
