--- a/.babelrc
+++ b/.babelrc
@@ -1,19 +1,20 @@
 {
   "presets": [
-    [ "env", { "targets": {"node": true}}],
-    "latest"
+    ["env", { "modules": false }],
+    "stage-2",
+    "es2015"
     ],
+  "plugins": ["transform-runtime"],
+  "comments": false,
   "env": {
     "development": {
       "plugins": [
-        "transform-runtime",
         ["babel-plugin-webpack-alias", { "config": "./webpack/index.babel.js" } ],
         "syntax-dynamic-import"
       ]
     },
     "production": {
       "plugins": [
-        "transform-runtime",
         ["babel-plugin-webpack-alias", { "config": "./webpack/index.babel.js" } ],
         "syntax-dynamic-import"
       ]
