implementing unit test

--- a/.babelrc
+++ b/.babelrc
@@ -18,6 +18,9 @@
         ["babel-plugin-webpack-alias", { "config": "./webpack/index.babel.js" } ],
         "syntax-dynamic-import"
       ]
+    },
+    "testing": {
+      "plugins": ["istanbul"]
     }
   }
 }
