--- a/package.json
+++ b/package.json
@@ -40,10 +40,8 @@
     "lint": "npm run logo && node node_modules/eslint/bin/eslint.js src --ignore-pattern **/*.spec.js --ext .vue,.js",
     "lint:css": "npm run logo && stylelint \"src/**/*.css\" --config .stylelintrc",
     "lint:all": "npm run lint && npm run lint:css",
-    "test": "npm run logo && cross-env NODE_ENV=testing node ./node_modules/mocha-webpack/bin/mocha-webpack --webpack-config webpack/index.babel.js --require ./src/base/shared/JsDomSetup.js src/**/*.spec.js",
     "jest": "./node_modules/.bin/jest",
     "jest:coverage": "./node_modules/.bin/jest --coverage",
-    "test:coverage": "cross-env TEST_COVERAGE=coverage node ./node_modules/nyc/bin/nyc npm test && nyc report --reporter=lcov",
     "start": "npm run logo && cross-env NODE_ENV=development node server/",
     "start:prod": "npm run build:prod && cross-env NODE_ENV=production node server/",
     "yo": "npm link src/base/conf/.react-base/templates/generator-react-base",
@@ -64,82 +62,70 @@
     "vuex": "3.0.1"
   },
   "devDependencies": {
-    "@vue/server-test-utils": "^1.0.0-beta.14",
-    "@vue/test-utils": "^1.0.0-beta.14",
+    "@vue/server-test-utils": "1.0.0-beta.14",
+    "@vue/test-utils": "1.0.0-beta.14",
     "assets-webpack-plugin": "3.5.1",
-    "autoprefixer": "8.2.0",
-    "babel-cli": "^6.26.0",
-    "babel-eslint": "8.2.2",
-    "babel-jest": "^22.4.3",
+    "autoprefixer": "8.3.0",
+    "babel-eslint": "8.2.3",
+    "babel-jest": "22.4.3",
     "babel-loader": "7.1.4",
-    "babel-plugin-istanbul": "4.1.6",
     "babel-plugin-syntax-dynamic-import": "6.18.0",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-plugin-webpack-alias": "2.1.2",
-    "babel-polyfill": "^6.26.0",
+    "babel-polyfill": "6.26.0",
     "babel-preset-es2015": "^6.24.1",
-    "babel-preset-latest": "^6.24.1",
     "babel-preset-stage-2": "6.24.1",
     "babel-preset-vue": "2.0.2",
     "babel-register": "6.26.0",
-    "chai": "4.1.2",
-    "chalk": "2.3.2",
+    "chalk": "2.4.0",
     "chromedriver": "2.37.0",
-    "connect-history-api-fallback": "^1.3.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^5.1.3",
-    "cross-spawn": "^6.0.4",
-    "css-loader": "^0.28.0",
+    "connect-history-api-fallback": "1.3.0",
+    "copy-webpack-plugin": "4.0.1",
+    "cross-env": "5.1.3",
+    "cross-spawn": "6.0.4",
+    "css-loader": "0.28.0",
     "css-modules-require-hook": "4.2.3",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-config-standard": "^11.0.0",
-    "eslint-friendly-formatter": "^3.0.0",
+    "eslint": "4.19.1",
+    "eslint-config-standard": "11.0.0",
+    "eslint-friendly-formatter": "4.0.1",
     "eslint-import-resolver-webpack": "0.9.0",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-html": "^4.0.2",
-    "eslint-plugin-import": "^2.9.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-promise": "^3.7.0",
-    "eslint-plugin-standard": "^3.0.1",
-    "eslint-plugin-vue": "^4.4.0",
-    "eventsource-polyfill": "^0.9.6",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^1.1.6",
-    "html-webpack-plugin": "^3.1.0",
+    "eslint-loader": "2.0.0",
+    "eslint-plugin-html": "4.0.2",
+    "eslint-plugin-import": "2.9.0",
+    "eslint-plugin-jsx-a11y": "6.0.3",
+    "eslint-plugin-node": "6.0.1",
+    "eslint-plugin-promise": "3.7.0",
+    "eslint-plugin-standard": "3.0.1",
+    "eslint-plugin-vue": "4.5.0",
+    "eventsource-polyfill": "0.9.6",
+    "extract-text-webpack-plugin": "3.0.2",
+    "file-loader": "1.1.6",
+    "html-webpack-plugin": "3.1.0",
     "ignore-styles": "5.0.1",
-    "isomorphic-fetch": "^2.2.1",
-    "istanbul-instrumenter-loader": "^3.0.1",
-    "jest": "^22.4.3",
-    "jsdom": "11.4.0",
-    "mocha": "^5.0.0",
-    "mocha-webpack": "1.1.0",
-    "nyc": "^11.6.0",
-    "postcss-import": "^11.0.0",
-    "postcss-modules-extract-imports": "^1.1.0",
-    "postcss-nested": "^3.0.0",
-    "postcss-reporter": "^5.0.0",
-    "postcss-url": "^7.0.0",
-    "progress-bar-webpack-plugin": "^1.9.3",
-    "regenerator-runtime": "^0.11.1",
-    "rimraf": "^2.6.0",
-    "sinon": "^4.2.0",
-    "sinon-chai": "^3.0.0",
-    "standard": "^11.0.0",
-    "url-loader": "^1.0.1",
+    "isomorphic-fetch": "2.2.1",
+    "jest": "22.4.3",
+    "postcss-import": "11.0.0",
+    "postcss-modules-extract-imports": "1.1.0",
+    "postcss-nested": "3.0.0",
+    "postcss-reporter": "5.0.0",
+    "postcss-url": "7.0.0",
+    "progress-bar-webpack-plugin": "1.9.3",
+    "regenerator-runtime": "0.11.1",
+    "rimraf": "2.6.0",
+    "standard": "11.0.0",
+    "url-loader": "1.0.1",
     "vue-eslint-parser": "2.0.3",
-    "vue-jest": "^2.5.0",
+    "vue-jest": "2.5.0",
     "vue-loader": "14.2.2",
-    "vue-style-loader": "^4.0.2",
-    "vue-template-compiler": "^2.5.16",
-    "vue2-google-maps": "^0.8.8",
+    "vue-style-loader": "4.0.2",
+    "vue-template-compiler": "2.5.16",
+    "vue2-google-maps": "0.9.2",
     "webpack": "3.10.0",
-    "webpack-bundle-analyzer": "^2.2.1",
-    "webpack-dev-middleware": "^2.0.4",
-    "webpack-dev-server": "^3.0.0",
-    "webpack-hot-middleware": "^2.18.0",
-    "webpack-node-externals": "^1.7.2"
+    "webpack-bundle-analyzer": "2.2.1",
+    "webpack-dev-middleware": "2.0.4",
+    "webpack-dev-server": "3.0.0",
+    "webpack-hot-middleware": "2.22.1",
+    "webpack-node-externals": "1.7.2"
   },
   "engines": {
     "node": ">= 6.0.0",
@@ -190,6 +176,7 @@
       "**/*.{js,vue}",
       "!**/*component.js",
       "!**/*container.js",
+      "!.*.js",
       "!src/base/**",
       "!**/node_modules/**",
       "!coverage/**",
