--- a/package.json
+++ b/package.json
@@ -65,9 +65,9 @@
     "assets-webpack-plugin": "3.5.1",
     "autoprefixer": "8.2.0",
     "babel-cli": "^6.26.0",
-    "babel-eslint": "8.2.2",
+    "babel-eslint": "8.2.3",
     "babel-loader": "7.1.4",
-    "babel-plugin-istanbul": "4.1.6",
+    "babel-plugin-istanbul": "^4.1.6",
     "babel-plugin-syntax-dynamic-import": "6.18.0",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-plugin-webpack-alias": "2.1.2",
@@ -98,16 +98,17 @@
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.0.1",
-    "eslint-plugin-vue": "^4.4.0",
+    "eslint-plugin-vue": "4.5.0",
     "eventsource-polyfill": "^0.9.6",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^3.1.0",
     "ignore-styles": "5.0.1",
     "isomorphic-fetch": "^2.2.1",
-    "jsdom": "11.4.0",
-    "mocha": "^5.0.0",
+    "jsdom": "11.8.0",
+    "mocha": "5.1.1",
     "mocha-webpack": "1.1.0",
+    "nyc": "^11.7.1",
     "postcss-import": "^11.0.0",
     "postcss-modules-extract-imports": "^1.1.0",
     "postcss-nested": "^3.0.0",
