--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-base-starter",
-  "version": "0.9.6",
-  "description": "Vue starter kit ReVue",
+  "version": "1.0.0",
+  "description": "VueJs starter kit + Vuex",
   "author": "Pablo Magaz",
   "contributors": [
     {
@@ -26,26 +26,17 @@
     "logo": "node ./src/base/conf/.react-base/logo.js",
     "webpack": "node_modules/webpack/bin/webpack.js",
     "clean": "rimraf dist/ && npm run generate:dll",
-    "clean:files": "rimraf dist/app.js",
-    "generate": "npm run logo && yo react-base",
-    "generate:component": "npm run logo && yo react-base --option=2",
-    "generate:container": "npm run logo && yo react-base --option=1",
-    "regenerate:modelIndex": "node ./src/base/shared/Regenerate.js --model",
-    "regenerate:routes": "node ./src/base/shared/Regenerate.js --routes",
-    "regenerate:reducerIndex": "node ./src/base/shared/Regenerate.js --reducer",
-    "regenerate": "npm run logo && node ./src/base/shared/Regenerate.js --all",
+    "clean:files": "rimraf dist/",
     "generate:dll": "cross-env NODE_ENV=dll webpack --config webpack/webpack.dll.config.babel.js",
     "build": "cross-env NODE_ENV=development webpack --config webpack/index.babel.js",
     "build:prod": "npm run clean && cross-env NODE_ENV=production webpack --config webpack/index.babel.js",
     "lint": "npm run logo && node node_modules/eslint/bin/eslint.js src --ignore-pattern **/*.spec.js --ext .vue,.js",
     "lint:css": "npm run logo && stylelint \"src/**/*.css\" --config .stylelintrc",
     "lint:all": "npm run lint && npm run lint:css",
-    "jest": "./node_modules/.bin/jest",
-    "jest:coverage": "./node_modules/.bin/jest --coverage",
+    "test": "./node_modules/.bin/jest",
+    "test:coverage": "./node_modules/.bin/jest --coverage",
     "start": "npm run logo && cross-env NODE_ENV=development node server/",
     "start:prod": "npm run build:prod && cross-env NODE_ENV=production node server/",
-    "yo": "npm link src/base/conf/.react-base/templates/generator-react-base",
-    "postYeomanGenerator": "npm run regenerate && npm run start",
     "coveralls": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
     "postinstall": "npm run generate:dll"
   },
