--- a/package.json
+++ b/package.json
@@ -41,12 +41,12 @@
     "postinstall": "npm run generate:dll"
   },
   "dependencies": {
-    "babel-core": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "compression": "1.7.2",
-    "express": "4.16.2",
+    "babel-core": "6.26.3",
+    "babel-preset-env": "1.7.0",
+    "compression": "1.7.3",
+    "express": "4.16.3",
     "install": "^0.11.0",
-    "moment": "2.20.1",
+    "moment": "2.22.2",
     "npm": "^5.8.0",
     "vue": "2.5.16",
     "vue-router": "3.0.1",
@@ -57,9 +57,9 @@
     "@vue/test-utils": "1.0.0-beta.14",
     "assets-webpack-plugin": "3.5.1",
     "autoprefixer": "8.3.0",
-    "babel-eslint": "8.2.3",
-    "babel-jest": "22.4.3",
-    "babel-loader": "7.1.4",
+    "babel-eslint": "8.2.6",
+    "babel-jest": "23.4.0",
+    "babel-loader": "7.1.5",
     "babel-plugin-syntax-dynamic-import": "6.18.0",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-plugin-webpack-alias": "2.1.2",
@@ -68,54 +68,54 @@
     "babel-preset-stage-2": "6.24.1",
     "babel-preset-vue": "2.0.2",
     "babel-register": "6.26.0",
-    "chalk": "2.4.0",
-    "chromedriver": "2.37.0",
+    "chalk": "2.4.1",
+    "chromedriver": "2.40.0",
     "connect-history-api-fallback": "1.3.0",
     "copy-webpack-plugin": "4.0.1",
     "cross-env": "5.1.3",
-    "cross-spawn": "6.0.4",
-    "css-loader": "0.28.0",
+    "cross-spawn": "6.0.5",
+    "css-loader": "1.0.0",
     "css-modules-require-hook": "4.2.3",
-    "eslint": "4.19.1",
+    "eslint": "5.2.0",
     "eslint-config-standard": "11.0.0",
     "eslint-friendly-formatter": "4.0.1",
     "eslint-import-resolver-webpack": "0.9.0",
-    "eslint-loader": "2.0.0",
-    "eslint-plugin-html": "4.0.2",
-    "eslint-plugin-import": "2.9.0",
-    "eslint-plugin-jsx-a11y": "6.0.3",
-    "eslint-plugin-node": "6.0.1",
-    "eslint-plugin-promise": "3.7.0",
-    "eslint-plugin-standard": "3.0.1",
-    "eslint-plugin-vue": "4.5.0",
+    "eslint-loader": "2.1.0",
+    "eslint-plugin-html": "4.0.5",
+    "eslint-plugin-import": "2.13.0",
+    "eslint-plugin-jsx-a11y": "6.1.1",
+    "eslint-plugin-node": "7.0.1",
+    "eslint-plugin-promise": "3.8.0",
+    "eslint-plugin-standard": "3.1.0",
+    "eslint-plugin-vue": "4.7.0",
     "eventsource-polyfill": "0.9.6",
     "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "1.1.6",
-    "html-webpack-plugin": "3.1.0",
+    "file-loader": "1.1.11",
+    "html-webpack-plugin": "3.2.0",
     "ignore-styles": "5.0.1",
     "isomorphic-fetch": "2.2.1",
-    "jest": "22.4.3",
-    "postcss-import": "11.0.0",
+    "jest": "23.4.1",
+    "postcss-import": "11.1.0",
     "postcss-modules-extract-imports": "1.1.0",
     "postcss-nested": "3.0.0",
     "postcss-reporter": "5.0.0",
-    "postcss-url": "7.0.0",
-    "progress-bar-webpack-plugin": "1.9.3",
+    "postcss-url": "7.3.2",
+    "progress-bar-webpack-plugin": "1.11.0",
     "regenerator-runtime": "0.11.1",
-    "rimraf": "2.6.0",
-    "standard": "11.0.0",
+    "rimraf": "2.6.2",
+    "standard": "11.0.1",
     "url-loader": "1.0.1",
-    "vue-eslint-parser": "2.0.3",
-    "vue-jest": "2.5.0",
+    "vue-eslint-parser": "3.1.1",
+    "vue-jest": "2.6.0",
     "vue-loader": "14.2.2",
-    "vue-style-loader": "4.0.2",
+    "vue-style-loader": "4.1.1",
     "vue-template-compiler": "2.5.16",
     "vue2-google-maps": "0.9.2",
     "webpack": "3.10.0",
     "webpack-bundle-analyzer": "2.2.1",
     "webpack-dev-middleware": "2.0.4",
     "webpack-dev-server": "3.0.0",
-    "webpack-hot-middleware": "2.22.1",
+    "webpack-hot-middleware": "2.22.3",
     "webpack-node-externals": "1.7.2"
   },
   "engines": {
